# C_Cpp

./: READ.ME
Task1/: .travis.yml  CMakeLists.txt  main.c
Task1/ci/: install-linux.sh
Task1/test/: CMakeLists.txt  test.cpp
